--- a/index.html
+++ b/index.html
@@ -3,10 +3,16 @@
   <head>
     <meta charset="UTF-8">
     <title>Gathering Input</title>
+    <script>
+      function getName() {
+        var fullName = document.getElementById("first").value;
+        document.getElementById("message").innerHTML = fullName;
+      }
+    </script>
   </head>
   <body>
-    <input type="text" id="first">
-    <input type="text" id="last">
+    First Name: <input type="text" id="first">
+    Last Name: <input type="text" id="last">
     <button type="button" id="doneButton" onclick="getName();">
       Done
     </button>
