--- a/index.html
+++ b/index.html
@@ -5,8 +5,10 @@
     <title>Gathering Input</title>
     <script>
       function getName() {
-        var fullName = document.getElementById("first").value;
-        document.getElementById("message").innerHTML = fullName;
+        var firstName = document.getElementById("first").value;
+        document.getElementById("firstMessage").innerHTML = firstName;
+        var lastName = document.getElementById("last").value;
+        document.getElementById("lastMessage").innerHTML = lastName
       }
     </script>
   </head>
@@ -16,7 +18,9 @@
     <button type="button" id="doneButton" onclick="getName();">
       Done
     </button>
-    <p id="message">
+    <p id="firstMessage">
+    </p>
+    <p id="lastMessage">
     </p>
   </body>
 </html>
